Accessibility client cannot navigate to internal links targets on iOS. https://bugs.webkit.org/show_bug.cgi?id=200559 <rdar://problem/45242534>

Patch by Andres Gonzalez <andresg_22@apple.com> on 2019-08-10
Reviewed by Zalan Bujtas.

Source/WebCore:

The cause of the problem on iOS is that AccessibilityObject::firstAccessibleObjectFromNode
used in AccessibilityRenderObject::linkedUIElements may return an object
that is ignored by accessibility clients on iOS, and thus the client
would not track the target of an internal link. This change ensures that
accessibilityLinkedElement will return a valid accessibility element to
the client, if it is exists.
* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::firstAccessibleObjectFromNode):
(WebCore::firstAccessibleObjectFromNode):
* accessibility/AccessibilityObject.h:
* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilityLinkedElement]):

LayoutTests:

Extneded this test to not only check that internal links expose their
target, but also that the target is an accessible element. Added a
second test case where the target is contained in a grouping element.
* accessibility/ios-simulator/internal-link-expected.txt:
* accessibility/ios-simulator/internal-link.html:

Canonical link: https://commits.webkit.org/214371@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248513 268f45cc-cd09-0410-ab3c-d52691b4dbfc